Update waitlist link in index.html

--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
   <div class="emoji">🍛🍽✨</div>
   <h1>FixMyPlate</h1>
   <p>Snap your plate. AI fixes it.<br>Get your 7-day meal plan instantly.</p>
-  <a href="https://forms.gle/MAKE_THIS_TOMORROW">Join Waitlist (Free)</a>
+  <a href="https://forms.gle/dKrwLu1rK7LjpsC67">Join Waitlist (Free)</a>
 </body>
 </html>
