--- a/index.html
+++ b/index.html
@@ -1,22 +1,20 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>FixMyPlate - AI fixes your food</title>
-  <style>
-    body { font-family: system-ui, sans-serif; text-align: center; padding: 60px 20px; background: linear-gradient(to bottom, #f0fdf4, #dcfce7); margin: 0; }
-    h1 { font-size: 72px; color: #065f46; margin: 0; line-height: 1; }
-    p { font-size: 32px; color: #166534; margin: 30px 0 50px; }
-    a { background: #10b981; color: white; padding: 22px 50px; font-size: 28px; text-decoration: none; border-radius: 16px; display: inline-block; box-shadow: 0 10px 20px rgba(16,185,129,0.3); }
-    a:hover { background: #059669; }
-    .emoji { font-size: 90px; margin: 20px 0; }
-  </style>
-</head>
-<body>
-  <div class="emoji">🍛🍽✨</div>
-  <h1>FixMyPlate</h1>
-  <p>Snap your plate. AI fixes it.<br>Get your 7-day meal plan instantly.</p>
-  <a href="https://forms.gle/dKrwLu1rK7LjpsC67">Join Waitlist (Free)</a>
+<html><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
+<title>PlateFixer — AI Meal Fixer</title>
+<style>
+  body {font-family: system-ui; text-align: center; padding: 60px 20px; background: #f8fff8; margin:0;}
+  h1 {font-size: 60px; color: #065f46; margin:0;}
+  p {font-size: 28px; color: #166534; margin: 30px 0;}
+  .price {font-size: 48px; color: #10b981; font-weight: bold;}
+  .old {text-decoration: line-through; color: #999; font-size: 32px;}
+  a {background: #10b981; color: white; padding: 20px 50px; font-size: 28px; text-decoration: none; border-radius: 12px; display: inline-block; margin: 20px;}
+  .guarantee {font-size: 18px; color: #666; margin: 40px 0;}
+</style></head><body>
+<div style="font-size:90px">🍛🍽✨</div>
+<h1>PlateFixer</h1>
+<p>Snap your plate. AI fixes it. Get 7-day plan.</p>
+<p><span class="old">$99/year</span> → <span class="price">$9.99</span> <b>lifetime</b></p>
+<a href="https://gumroad.com/l/platefixer">Buy Now — First 100 Only</a>
+<p class="guarantee">100% refund if we don’t deliver in 48h<br>Zero risk. Real product.</p>
 </body>
 </html>
