--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <h1>PlateFixer</h1>
 <p>Snap your plate. AI fixes it. Get 7-day plan.</p>
 <p><span class="old">$99/year</span> → <span class="price">$9.99</span> <b>lifetime</b></p>
-<a href="https://gumroad.com/l/platefixer">Buy Now — First 100 Only</a>
+<a href="https://platefixer.gumroad.com/l/gklyqy">Buy Now — First 100 Only</a>
 <p class="guarantee">100% refund if we don’t deliver in 48h<br>Zero risk. Real product.</p>
 </body>
 </html>
