Update title and content for upcoming launch

--- a/index.html
+++ b/index.html
@@ -1,20 +1,15 @@
 <!DOCTYPE html>
 <html><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
-<title>PlateFixer — AI Meal Fixer</title>
+<title>PlateFixer – Coming in 7 Days</title>
 <style>
-  body {font-family: system-ui; text-align: center; padding: 60px 20px; background: #f8fff8; margin:0;}
-  h1 {font-size: 60px; color: #065f46; margin:0;}
-  p {font-size: 28px; color: #166534; margin: 30px 0;}
-  .price {font-size: 48px; color: #10b981; font-weight: bold;}
-  .old {text-decoration: line-through; color: #999; font-size: 32px;}
-  a {background: #10b981; color: white; padding: 20px 50px; font-size: 28px; text-decoration: none; border-radius: 12px; display: inline-block; margin: 20px;}
-  .guarantee {font-size: 18px; color: #666; margin: 40px 0;}
+  body {font-family:system-ui;text-align:center;padding:60px 20px;background:#f8fff8;margin:0;}
+  h1 {font-size:60px;color:#065f46;}
+  p {font-size:28px;color:#166534;margin:30px 0;}
+  a {background:#10b981;color:white;padding:20px 50px;font-size:28px;text-decoration:none;border-radius:12px;display:inline-block;margin:20px;}
 </style></head><body>
 <div style="font-size:90px">🍛🍽✨</div>
 <h1>PlateFixer</h1>
-<p>Snap your plate. AI fixes it. Get 7-day plan.</p>
-<p><span class="old">$99/year</span> → <span class="price">$9.99</span> <b>lifetime</b></p>
-<a href="https://platefixer.gumroad.com/l/gklyqy">Buy Now — First 100 Only</a>
-<p class="guarantee">100% refund if we don’t deliver in 48h<br>Zero risk. Real product.</p>
+<p>Real AI app launching in 7 days.<br>First 200 get lifetime free.</p>
+<a href="https://docs.google.com/forms/d/e/1FAIpQLSdmAuh5UeEx_egKTn_Up80fNm8aVmpBHNcXR0MSGnQVvNa0NQ/viewform?usp=header">Join Free Beta</a>
 </body>
 </html>
